# MicMuter

./: .gitattributes  .gitignore  LICENSE  mic_muter.sln  readme.md
common_lib/: common_lib.vcxproj  framework.h  logger.cpp  logger.h  util.cpp  util.h
installer/: mic_muter_installer.nsi
lunasvg/: CMakeLists.txt  CMakeSettings.json
mic_muter/: audio_controller.cpp  audio_controller.h  framework.h  hotkey.cpp  image.cpp  image.h  mic_muter.cpp  mic_muter.rc  mic_muter.vcxproj  mic_muter.vcxproj.filters  notification_icon.cpp  notification_icon.h  options_dlg.cpp  resource.h  settings.cpp  settings.h
mic_muter/images/: microphone_base_svg.h  microphone_mute_svg.h  microphone_normal_svg.h
mic_muter_dll/: hook.cpp  hook.h  mic_muter_dll.vcxproj
